feat: add sort functionality

--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,7 +12,8 @@
     "@cloudinary/url-gen": "^1.22.0",
     "@cloudinary/vue": "^1.13.3",
     "@tailwindcss/vite": "^4.1.18",
-    "@vueuse/core": "^14.2.0",
+    "@vueuse/components": "^14.2.1",
+    "@vueuse/core": "^14.2.1",
     "lucide-vue-next": "^0.563.0",
     "pinia": "^3.0.4",
     "tailwindcss": "^4.1.18",
